Add html and css for login page

--- a/proj/src/home.html
+++ b/proj/src/home.html
@@ -14,7 +14,7 @@
                 <a href="#login" id="loginbtn">LOGIN</a>
                 <a href="#products">PRODUCTS</a>
                 <a href="#about">ABOUT</a>
-                <a href="#home">HOME</a>
+                <a href="#home" class="active">HOME</a>
                 
               </div>
               <div class="right">
