--- a/proj/src/home.html
+++ b/proj/src/home.html
@@ -11,10 +11,10 @@
     <body >
         <div >
             <div class="topnav">
-                <a href="#login" id="loginbtn">LOGIN</a>
-                <a href="#products">PRODUCTS</a>
-                <a href="#about">ABOUT</a>
-                <a href="#home" class="active">HOME</a>
+                <a href="#login" id="loginbtn" data-testid="login-btn">LOGIN</a>
+                <a href="#products" data-testid="products-btn">PRODUCTS</a>
+                <a href="#about" data-testid="about-btn">ABOUT</a>
+                <a href="#home" class="active" data-testid="home-btn">HOME</a>
                 
               </div>
               <div class="right">
@@ -22,7 +22,7 @@
                 <p class="subtitle">Focusing on creating perfect harmony among textures, flavours and ingredients, our products' recipes are inspired from each of our Pastry Chef's personal take on classic simplicity. Every bite’s a joy as we continue to create products that bring an abundance of joy and goodness in order to satisfy the evolving needs of consumers.</p>
               </div>
               <div>
-                <button class="discoverBtn">Discover Our Pastry</button>
+                <button class="discoverBtn" data-testid="discover-btn">Discover Our Pastry</button>
               </div>
         </div>
     </body>
