Checkout Left Side

--- a/proj/src/checkout_pg.html
+++ b/proj/src/checkout_pg.html
@@ -33,11 +33,11 @@
                         <div class ="r-ship"> 
                             <div class ="c-ship" id = "c1">
                                 John M. Doe<br>
-                                1415 E Rincon Dr<br>
-                                Phoenix, Arizona 
+                                Blk12, Lot 4, Midori Plains<br>
+                                Tungkop, Minglanilla
                             </div>
                             <div class ="c-ship" id="c2">
-                                82671 United Details<br>
+                                Cebu, Philippines<br>
                                 josh@mail.com<br>
                                 <a href="#editShipAdd" id="editShip-btn">
                                     <i class="fa fa-pencil-square fa-lg" aria-hidden="true"></i></a>
@@ -46,7 +46,28 @@
                         </div>
                         <br>
                         <div class="subtitle">Payment Information</div>
-                        <hr class = "line">
+                        <hr class = "line"><br>
+                        <div class = "subtitle2">Name on Card</div>
+                        <div class = "pay-info" id = "name"><div id ="john">John M. Doe</div></div>
+                        <div class = "subtitle2">Card Information</div>
+                        <div class = "pay-info" id = "name"><div id ="john">1515 3456 7653 3453</div></div>
+                        <div class = "mini-row">
+                            <div class ="mini-col" id = "mcol1">
+                                <div class = "subtitle2">Exp. Date</div>
+                                <div class = "pay-info" id = "expDate"><div id ="john1">MM/YY</div></div>
+                            </div>
+                            <div class ="mini-col" id ="mcol2">
+                                <div class = "subtitle2" >CVC Code</div>
+                                <div class = "pay-info" id = "expDate"><div id ="john1">XXX</div>
+                            
+                            </div>  
+                            </div>
+                            <div class ="mini-col" id ="mcol3">
+                                <a href="#editShipAdd" id="editPay-btn">
+                                    <i class="fa fa-pencil-square fa-xl" aria-hidden="true"></i></a>
+                            </div>
+                            
+                        </div>
                     </div>
                     <div class="column" id ="col2">
                         <div>
@@ -56,11 +77,11 @@
                         <div class ="r-ship"> 
                             <div class ="c-ship" id = "c1">
                                 John M. Doe<br>
-                                1415 E Rincon Dr<br>
-                                Phoenix, Arizona 
+                                Blk12, Lot 4, Midori Plains<br>
+                                Tungkop, Minglanilla
                             </div>
                             <div class ="c-ship" id="c2">
-                                82671 United Details<br>
+                                Cebu, Philippines<br>
                                 josh@mail.com<br>
                                 <a href="#editShipAdd" id="editShip-btn">
                                     <i class="fa fa-pencil-square fa-lg" aria-hidden="true"></i></a>
