--- a/proj/src/checkout_pg.html
+++ b/proj/src/checkout_pg.html
@@ -20,6 +20,7 @@
                 <a href="#home">HOME</a>
             </div>
               <div class="checkoutForm">
+                <div class ="check-space">
                 <div class="header">
                     <div class="title">Checkout</div>
                     <!-- <div class="subtitle">Login to your account.</div> -->
@@ -141,6 +142,7 @@
                 </div> -->
                 
                 </div>
+            </div>
             </div>
         </div>
     </body>
